[project]
name = "agentops-360"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai>=2.3.0",
    "httpx>=0.28.1",
    "langgraph>=1.2.0",
    "marvin>=3.2.7",
    "pydantic>=2.13.4",
    "pypdf>=6.11.0",
    "python-dotenv>=1.2.2",
]
